trying to use facebook authentication

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,6 +8,7 @@
 <body>
 	<div class="main">
 		<h1>Git Status</h1>
+		<a href="/auth/facebook">Login with Facebook</a>
 		<h2 id="info">Enter Your Name</h2>
 		<form action="login" method="POST" id="login">
 			<input type="text" id="name" name="name" placeholder="Example: John Smith" required>
