--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,5 +10,15 @@
 		<h1>Git Status</h1>
 		<a href="/auth/facebook"><img src="./images/facebook-login.png" style="margin-top: 42px;margin-left: 6px;"></a>
 	</div>
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=1244021775614809";
+		fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+	</script>
+	<div class="fb-login-button" data-max-rows="4" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true"></div>
 </body>
 </html>
