--- a/HTML/landingPage.html
+++ b/HTML/landingPage.html
@@ -25,9 +25,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
           </ul>
 	      <form class="navbar-form navbar-right" role="search">
 	        <div class="form-group">
@@ -54,7 +54,6 @@
 						</div>
 					</div>
 					<div class="profile-userbuttons">
-						<button type="button" class="btn btn-success btn-sm">Profile</button>
 						<button type="button" class="btn btn-danger btn-sm">Logout</button>
 					</div>
 					<div class="profile-usermenu">
@@ -79,44 +78,47 @@
 				</div>
 			</div>
 			<div class="col-md-7">
-				<div class="container-fluid"></div>
-				<div class="row-fluid">
-					<div class="panel-group">
-					 	<div class="panel panel-primary">
-						    <div class="panel-heading">You can play these games</div>
-						    <div class="panel-body">
-							    <div class="row">
-									<div class="col-xs-7">29</div>
-									<div class="col-xs-7">Hearts</div>
-									<div class="col-xs-7">Bluff</div>
-									<div class="col-xs-7">Uno</div>
-									<div class="col-xs-7">Uno</div>
-									<div class="col-xs-7">Battle-ship</div>
-									<div class="col-xs-7">Battleship</div>
+				<div class="container-fluid">
+					<div class="row-fluid">
+						<div class="panel-group">
+						 	<div class="panel panel-primary">
+							    <div class="panel-heading">You can play these games</div>
+							    <div class="panel-body">
+								    <div class="row-fluid">
+										<button type="button" class="btn btn-success">29</button>
+										<button type="button" class="btn btn-success">Hearts</button>
+										<button type="button" class="btn btn-success">Bluff</button>
+										<button type="button" class="btn btn-success">Uno</button>
+										<button type="button" class="btn btn-success">Uno</button>
+										<button type="button" class="btn btn-success">Battle-ship</button>
+										<button type="button" class="btn btn-success">Battleship</button>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
 				<br/>
-				<div class="row-fluid">
-					<div class="panel-group">
-					 	<div class="panel panel-primary">
-						    <div class="panel-heading">Your git-hub helper</div>
-						    <div class="panel-body">
-							    <div class="row">
-									<div class="col-xs-7"><a href="/step-4-interns">STEP-4 Batch Intern Github Repos</a></div>
-									<div class="col-xs-7">item 2</div>
-									<div class="col-xs-7">item 3</div>
-									<div class="col-xs-7">item 4</div>
-									<div class="col-xs-7">item 5</div>
-									<div class="col-xs-7">item 6</div>
-									<div class="col-xs-7"><a href="#">Search in github</a></div>
+					<div class="row-fluid">
+						<div class="panel-group">
+						 	<div class="panel panel-primary">
+							    <div class="panel-heading">Your git-hub helper</div>
+							    <div class="panel-body">
+								    <div class="row-fluid">
+										<a href="/step-4-interns">
+											<button type="button" class="btn btn-success">
+												STEP-4 Batch Intern Github Repos
+											</button>
+										</a>
+										<a href="#">
+											<button type="button" class="btn btn-success">
+												Search in github
+											</button>
+										</a>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
 				</div>
 			</div>
 		</div>
